# fem_homework

./: CMakeLists.txt
.cache/clangd/index/: MG.cpp.4FECF2E42427F653.idx  MG.cpp.60DAB447BEC56941.idx  MG.cpp.B198539A9DBE0901.idx  MG.cpp.EC52975ADCE7C2B1.idx  MG.h.3A861F16A0E5CF72.idx  MG.h.C168C05B0405255A.idx  MG.h.DF88256DF1DB0F48.idx  MG.h.F462E8391695DDDE.idx  P1Fem.cpp.5F48039D5399D9FD.idx  P1Fem.cpp.662EF575B85111E4.idx  P1Fem.cpp.F8D2F8FA91141B5C.idx  P1Fem.cpp.FE4F1D2430B55EEC.idx  P1Fem.h.195A9E932C44D342.idx  P1Fem.h.5A1BF18F9F02DE37.idx  P1Fem.h.5C29E79819B452B1.idx  P1Fem.h.E3546358E270C268.idx  test.cpp.108799DA94ABA1A0.idx  test.cpp.6B8D76268FF2B32F.idx  test.cpp.9C4DD728460615C3.idx  test.cpp.B1C3EC8D0A204E50.idx  test_fem.cpp.1A09712903ACC476.idx  test_fem.cpp.536709A30ED68BD4.idx  test_fem.cpp.80136C35395CD1CF.idx  test_fem.cpp.867983DC0AB8874F.idx
data/: mg_numerical_result.csv  multi_h_err.csv  numerical_result_1.csv  numerical_result_2.csv  numerical_result_3.csv  numerical_result_4.csv  numerical_result_5.csv  numerical_result_6.csv
include/: MG.h  P1Fem.h
src/: CMakeLists.txt  MG.cpp  P1Fem.cpp  test_fem.cpp
test/: CMakeLists.txt  plot-figure.py  test.cpp
zuoye/: 读书报告.aux  读书报告.tex
